# BMFGen

./: .gitignore  CMakeLists.txt  README.md
img/macos/: AppIcon.icns
src/: CMakeLists.txt  CharacterSet.cpp  CharacterSet.hpp  Constants.cpp  Constants.hpp  FontGenContext.cpp  FontGenContext.hpp  FontGenWorkerThread.cpp  FontGenWorkerThread.hpp  FontModel.cpp  FontModel.hpp  FontPage.cpp  FontPage.hpp  GeneratedFont.cpp  GeneratedFont.hpp  Glyph.hpp  ImageCache.cpp  ImageCache.hpp  Main.cpp  MaxRectsBinPack.cpp  MaxRectsBinPack.hpp  QtDataModelUtil.hpp  QtImageUtil.cpp  QtImageUtil.hpp  QtJsonUtil.hpp  QtStringUtil.cpp  QtStringUtil.hpp  files.cmake
src/resources/: DefaultFontConfig.json  GeneralResources.qrc  GenerateIcons.sh  MainStylesheet.qss  UIResources.qrc
src/widgets/: AngleDial.cpp  AngleDial.hpp  CharacterSetSelectionWidget.cpp  CharacterSetSelectionWidget.hpp  ClickableLabel.cpp  ClickableLabel.hpp  ColorPickerWidget.cpp  ColorPickerWidget.hpp  ColorWheelWidget.cpp  ColorWheelWidget.hpp  ComboBox.cpp  ComboBox.hpp  FillOptionsWidget.cpp  FillOptionsWidget.hpp  FillOptionsWidget.ui  FontEditorWidget.cpp  FontEditorWidget.hpp  FontEditorWidget.ui  FontImageTypeComboBox.cpp  FontImageTypeComboBox.hpp  FontSelectionWidget.cpp  FontSelectionWidget.hpp  FontWidget.cpp  FontWidget.hpp  FontWidget.ui  GradientEditorWidget.cpp  GradientEditorWidget.hpp  ListWidget.cpp  ListWidget.hpp  RightAlignedLabel.cpp  RightAlignedLabel.hpp  ShortFilenameLineEdit.cpp  ShortFilenameLineEdit.hpp  Slider.cpp  Slider.hpp  SpinBox.cpp  SpinBox.hpp  StatusLabel.cpp  StatusLabel.hpp  TextPreviewWidget.cpp  (+4 more)
src/windows/: AboutDialog.cpp  AboutDialog.hpp  AboutDialog.ui  CharacterSetsDialog.cpp  CharacterSetsDialog.hpp  CharacterSetsDialog.ui  FontVariationDialog.cpp  FontVariationDialog.hpp  FontVariationDialog.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
